--- a/compose.yml
+++ b/compose.yml
@@ -4,4 +4,9 @@ services:
       context: .
     ports:
       - "8070:8070"
-    
+    database:
+      build: database
+      restart: always
+      hostname: postgres
+      ports:
+        - "5432:5432"
